small edits to css

--- a/index.html
+++ b/index.html
@@ -1,12 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Haley Trumbo: Portfolio</title>
+  </head>
+  <body>
+    <!-- header -->
+    <header>
+      <h1>Haley Trumbo</h1>
+      <!-- navigation -->
+      <nav>
+        <ul>
+          <li>
+            <a href="#About-Me">About Me</a>
+          </li>
+          <li>
+            <a href="#Work">Work</a>
+          </li>
+          <li>
+            <a href="#Contact-Me">Contact Me</a>
+          </li>
+          <li>
+            <a href="#Resume">Resume</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <!-- sections that correspond with links in navigation -->
+      <section class="page-section" id="About-Me">
+        <h2>About Me</h2>
+        <div>
+          <p>
+            Hello! I'm Haley. I'm a multidisciplinary developer from the SF bay
+            area, currently based out of Honolulu, HI. I am newly graduated from
+            UC Berkeley's full-stack bootcamp and I have a passion for creative
+            and engaging user interfaces, and applications that provide a
+            helpful service. In my spare time you can find me somewhere in the
+            mountains or the ocean, or curled up playing Zelda at home.
+            (patiently waiting for that 2023 release!) New in the industry, I am
+            excited to be a part of a team and turn my skills into a career. I'm
+            also excited to find ways to use developing to contribute to social
+            causes i feel passionately about. From climate change and
+            conservation, to houselessness, health care availability and civil
+            and womens rights - I'm hoping i can use my skills to give back.
+            Feel free to reach out to me with any questions or opportunities or
+            even just to chat!
+          </p>
+        </div>
+      </section>
+
+      <!-- portfolio container -->
+      <section class="page-section" id="Work">
+        <h2>Work</h2>
+
+        <div class="flex-container">
+          <a href="#" class="flex-item project1">
+            <div>
+              <h3>Will be my Project #2</h3>
+              <span>This project does not exist yet!</span>
+            </div>
+          </a>
+
+          <a href="#" class="flex-item project2">
+            <div>
+              <h3>Dynamic Calender</h3>
+              <span
+                >Uses HTML, CSS, Jquery, Moment. A calender application that
+                allows you to save events for each hour of the day and save them
+                to local storage. Featuring dynamically updated HTML and CSS so
+                that each time block changes color based on past, present, or
+                future events.
+              </span>
+            </div>
+          </a>
+          <a href="#" class="flex-item project3">
+            <div>
+              <h3>Doges and Dad Jokes!</h3>
+              <span
+                >Uses HTML, JavaScript, CSS, Bulma, 2 public API's. Simple
+                application with buttons that generate a random silly joke and a
+                corresponding punchline, while displaying a randomly generated
+                picture of a cute Shiba Inu dog in-tandem. Feature that allows
+                the user to save their favorite joke in local storage.</span
+              >
+            </div>
+          </a>
+
+          <a href="#" class="flex-item project4">
+            <div>
+              <h3>Projct #4</h3>
+              <span>description</span>
+            </div>
+          </a>
+
+          <a href="#" class="flex-item project5y">
+            <div>
+              <h3>Project #5</h3>
+              <span>description</span>
+            </div>
+          </a>
+        </div>
+      </section>
+
+      <!-- contact me -->
+      <section class="page-section contact" id="Contact-Me">
+        <h2>Contact Me</h2>
+        <div>
+          <address>
+            <a href="tel:+19254139839">925.413.9839</a>
+            <a href="mailto:trumbo.haley@gmail.com">trumbo.haley@gmail.com</a>
+            <a href="#">GitHub</a>
+            <a href="#">Linkedin</a>
+          </address>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
