finishes layout and media query

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
             and engaging user interfaces, and applications that provide a
             helpful service. In my spare time you can find me somewhere in the
             mountains or the ocean, or curled up playing Zelda at home.
-            (patiently waiting for that 2023 release!) New in the industry, I am
+            (patiently waiting for the 2023 release!) New in the industry, I'm
             excited to be a part of a team and turn my skills into a career. I'm
-            also excited to find ways to use developing to contribute to social
-            causes i feel passionately about. From climate change and
-            conservation, to houselessness, health care availability and civil
-            and womens rights - I'm hoping i can use my skills to give back.
-            Feel free to reach out to me with any questions or opportunities or
-            even just to chat!
+            also looking forward to finding ways to use my skills in software
+            development to contribute to social causes i feel passionately
+            about. From climate change and conservation, to houselessness,
+            health care availability and civil and womens rights - I'm hoping i
+            can use my skills in coding to give back. Feel free to drop me a
+            line with any questions or opportunites.
           </p>
         </div>
       </section>
@@ -61,47 +61,44 @@
         <div class="flex-container">
           <a href="#" class="flex-item project1">
             <div>
-              <h3>Will be my Project #2</h3>
+              <h3>Will be my Project #3</h3>
               <span>This project does not exist yet!</span>
             </div>
           </a>
 
           <a href="#" class="flex-item project2">
             <div>
-              <h3>Dynamic Calender</h3>
-              <span
-                >Uses HTML, CSS, Jquery, Moment. A calender application that
-                allows you to save events for each hour of the day and save them
-                to local storage. Featuring dynamically updated HTML and CSS so
-                that each time block changes color based on past, present, or
-                future events.
-              </span>
+              <h3>Will be Project #2</h3>
+              <span>This project doesnt exist!</span>
             </div>
           </a>
-          <a href="#" class="flex-item project3">
+          <a
+            href="https://github.com/JacquelineHockin/Group-1-Project-"
+            class="flex-item project3"
+          >
             <div>
               <h3>Doges and Dad Jokes!</h3>
-              <span
-                >Uses HTML, JavaScript, CSS, Bulma, 2 public API's. Simple
-                application with buttons that generate a random silly joke and a
-                corresponding punchline, while displaying a randomly generated
-                picture of a cute Shiba Inu dog in-tandem. Feature that allows
-                the user to save their favorite joke in local storage.</span
-              >
+              <span>HTML, JavaScript, CSS, Bulma, 2 public API's</span>
             </div>
           </a>
 
-          <a href="#" class="flex-item project4">
+          <a
+            href="https://github.com/haleymay21/Challenge5-Calendar"
+            class="flex-item project4"
+          >
             <div>
-              <h3>Projct #4</h3>
-              <span>description</span>
+              <h3>Dynamic Calender</h3>
+              <span>HTML, CSS, Jquery, Moment</span>
             </div>
           </a>
 
-          <a href="#" class="flex-item project5y">
+          <a
+            href="https://github.com/haleymay21/Challenge6-Weather"
+            class="flex-item project5y"
+          >
             <div>
-              <h3>Project #5</h3>
-              <span>description</span>
+              <h3>Weather Dashboard</h3>
+              <span>HTML, CSS, Bootstrap, Jquery, Openweather API</span>
             </div>
           </a>
         </div>
