adds photo and link to new project

--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
           <li>
             <a href="#Contact-Me">Contact Me</a>
           </li>
-          <li>
-            <a href="#Resume">Resume</a>
-          </li>
         </ul>
       </nav>
     </header>
@@ -35,21 +32,23 @@
       <section class="page-section" id="About-Me">
         <h2>About Me</h2>
         <div>
-          <p>
-            Hello! I'm Haley. I'm a multidisciplinary developer from the SF bay
-            area, currently based out of Honolulu, HI. I am newly graduated from
-            UC Berkeley's full-stack bootcamp and I have a passion for creative
-            and engaging user interfaces, and applications that provide a
-            helpful service. In my spare time you can find me somewhere in the
-            mountains or the ocean, or curled up playing Zelda at home.
-            (patiently waiting for the 2023 release!) New in the industry, I'm
-            excited to be a part of a team and turn my skills into a career. I'm
-            also looking forward to finding ways to use my skills in software
-            development to contribute to social causes i feel passionately
-            about. From climate change and conservation, to houselessness,
-            health care availability and civil and womens rights - I'm hoping i
-            can use my skills in coding to give back. Feel free to drop me a
-            line with any questions or opportunites.
+          <img style="float: right" src="./assets/IMG-0877.jpg" alt="haley" />
+          <p id="hello">Hello! <span id="haley"> I'm Haley. </span></p>
+          <p id="about">
+            I am a multidisciplinary developer from the SF bay area, currently
+            based out of Honolulu, HI. I am newly graduated from UC Berkeley's
+            full-stack bootcamp and I have a passion for creative and engaging
+            user interfaces, and applications that provide a helpful service. In
+            my spare time you can find me somewhere in the mountains or the
+            ocean, or curled up playing Zelda at home (patiently waiting for the
+            2023 release!). New in the industry, I'm excited to be a part of a
+            team and turn my skills into a career. I'm also looking forward to
+            finding ways to use my skills in software development to contribute
+            to social causes i feel passionately about. From climate change and
+            conservation, to houselessness, health care availability and civil
+            and womens rights - I'm hoping i can use my skills in coding to give
+            back. Feel free to drop me a line with any questions or opportunites
+            😊
           </p>
         </div>
       </section>
@@ -66,14 +65,19 @@
             </div>
           </a>
 
-          <a href="#" class="flex-item project2">
+          <a
+            href="https://github.com/haleymay21/Tap_Into_Source"
+            class="flex-item project2"
+          >
             <div>
-              <h3>Will be Project #2</h3>
-              <span>This project doesnt exist!</span>
+              <h3>Tap Into Source</h3>
+              <span
+                >Node.js, Handlebars, Express, Sequelize, Bootsrap, Jquery</span
+              >
             </div>
           </a>
           <a
-            href="https://github.com/JacquelineHockin/Group-1-Project-"
+            href="https://jacquelinehockin.github.io/Group-1-Project-/"
             class="flex-item project3"
           >
             <div>
@@ -83,7 +87,7 @@
           </a>
 
           <a
-            href="https://github.com/haleymay21/Challenge5-Calendar"
+            href="https://haleymay21.github.io/Challenge5-Calendar/"
             class="flex-item project4"
           >
             <div>
@@ -94,11 +98,14 @@
 
           <a
             href="https://github.com/haleymay21/Challenge6-Weather"
-            class="flex-item project5y"
+            class="flex-item project5"
           >
             <div>
               <h3>Weather Dashboard</h3>
-              <span>HTML, CSS, Bootstrap, Jquery, Openweather API</span>
+              <span
+                >HTML, CSS, Bootstrap, Jquery, Openweather API !!not deployed
+                yet!!
+              </span>
             </div>
           </a>
         </div>
@@ -111,8 +118,10 @@
           <address>
             <a href="tel:+19254139839">925.413.9839</a>
             <a href="mailto:trumbo.haley@gmail.com">trumbo.haley@gmail.com</a>
-            <a href="#">GitHub</a>
-            <a href="#">Linkedin</a>
+            <a href="https://github.com/haleymay21">GitHub</a>
+            <a href="https://www.linkedin.com/in/haley-trumbo-539093256/"
+              >Linkedin</a
+            >
           </address>
         </div>
       </section>
